Fix row gap

--- a/css/index.css
+++ b/css/index.css
@@ -186,18 +186,18 @@ li {
   flex-direction: column;
 }
 .main-program .program-list {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-auto-rows: 1fr;
   gap: 12px;
   margin: 16px 0;
 }
 .main-program .program-list .program-item {
-  min-height: 80px;
-  align-items: center;
-  justify-content: left;
   display: grid;
   grid-template-columns: 24px 100px auto;
   gap: 20px;
+  align-items: center;
+  justify-content: left;
   background-color: rgba(255, 255, 255, 0.03);
   padding: 16px;
 }
@@ -223,9 +223,7 @@ li {
   }
   .main-program .program-list {
     margin: 16px 12px;
-    display: grid;
     grid-template-columns: repeat(5, minmax(0, 1fr));
-    grid-auto-rows: 1fr;
     justify-content: center;
   }
   .main-program .program-list .program-item {
@@ -245,17 +243,18 @@ li {
   flex-direction: column;
 }
 .featured-speakers .speakers-list {
-  display: flex;
-  flex-direction: column;
-  margin: 16px 0 48px 0;
-  gap: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 1fr;
+  margin: 24px 0 48px 0;
+  gap: 20px;
 }
 .featured-speakers .speakers-list .speaker-item {
   display: flex;
   gap: 20px;
 }
 .featured-speakers .speakers-list .speaker-item .profile-image {
-  height: 100%;
+  height: 100px;
   width: 100px;
 }
 .featured-speakers .more-button {
@@ -266,8 +265,8 @@ li {
     align-items: center;
   }
   .featured-speakers .speakers-list {
-    display: grid;
     grid-template-columns: 50% 50%;
+    grid-row-gap: 48px;
     width: 80%;
   }
   .featured-speakers .speakers-list .speaker-item {
